<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <ImageView
            android:id="@+id/questionImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp" app:layout_constraintBottom_toTopOf="@+id/optionsRadioGroup"
            android:contentDescription="@string/image_question"/>

    <TextView
            android:id="@+id/questionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Question"
            android:textSize="18sp"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"/>
    <RadioGroup
            android:id="@+id/optionsRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/questionTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="210dp">

        <RadioButton
                android:id="@+id/option1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/option_1"
                android:minHeight="48dp"/>
        <RadioButton
                android:id="@+id/option3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/option_3"
                android:minHeight="48dp"/>
        <RadioButton
                android:id="@+id/option4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/option_4"
                android:minHeight="48dp"/>
        <RadioButton
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/option_2"
                android:minHeight="48dp"/>

    </RadioGroup>

    <Button
            android:id="@+id/toggleSoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/couper_son"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:background="@drawable/rounded_button"
            app:layout_constraintTop_toBottomOf="@id/optionsRadioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="150dp"
            app:layout_constraintHorizontal_bias="0.508"/>
    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:progress="0"
            android:max="100"/>

</androidx.constraintlayout.widget.ConstraintLayout>
