<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/first_color"
        tools:context=".ResultActivity">

    <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utilisateur"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" />

    <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Score"
            android:textSize="38sp"
            android:textColor="@color/second_color"
            app:layout_constraintTop_toBottomOf="@id/usernameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

    <TextView
            android:id="@+id/topScoresLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meilleurs_scores"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/scoreTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" />

    <TableLayout
            android:id="@+id/topScoresTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            app:layout_constraintTop_toBottomOf="@id/topScoresLabelTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_margin="22dp"
            android:padding="8dp"
            android:background="@color/second_color">
        <!-- Placeholder for rows, will be populated dynamically -->
    </TableLayout>

    <Button
            android:id="@+id/restartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommencer"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/second_color"
            app:layout_constraintTop_toBottomOf="@id/topScoresTableLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" />

    <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accueil"
            android:backgroundTint="@color/white"
            android:textColor="@color/second_color"
            android:background="@drawable/rounded_button"
            app:layout_constraintTop_toBottomOf="@id/restartButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
