<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2C498F"
        android:padding="16dp">

    <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"/>

    <ImageView
            android:id="@+id/logoImageViewBonus"
            android:layout_width="79dp"
            android:layout_height="77dp"
            android:src="@drawable/bonus"
            app:layout_constraintTop_toBottomOf="@id/welcomeText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp" android:contentDescription="@string/todo"
            app:layout_constraintHorizontal_bias="0.063"/>
    <ImageView
            android:id="@+id/logoImageViewBonus2"
            android:layout_width="72dp"
            android:layout_height="71dp"
            android:src="@drawable/bonus2"
            app:layout_constraintTop_toBottomOf="@id/welcomeText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp" android:contentDescription="@string/todo"
            app:layout_constraintHorizontal_bias="0.957"/>
    <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintTop_toBottomOf="@id/welcomeText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="144dp" android:contentDescription="@string/todo"
            app:layout_constraintHorizontal_bias="0.526"/>
    <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/enter_name"
            app:layout_constraintTop_toBottomOf="@id/logoImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp" android:minHeight="48dp" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:id="@+id/startButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:padding="16dp"
            android:backgroundTint="#FF9800"
            android:textColor="@color/white"
            android:text="@string/start_quiz"
            app:layout_constraintTop_toBottomOf="@id/nameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:id="@+id/multiJouerButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:padding="16dp"
            android:backgroundTint="#2196F3"
            android:textColor="@color/white"
            android:text="@string/multi_jouer"
            app:layout_constraintTop_toBottomOf="@id/nameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="84dp" app:layout_constraintHorizontal_bias="0.498"/>


</androidx.constraintlayout.widget.ConstraintLayout>
